add some comments

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 CC = gcc
-CFLAGS = -W -Wall -O3
+CFLAGS = -W -Wall -O3 -I /home/ganquan/pmdk/src/include
 OBJECTS = $(patsubst %.c, %.o, $(wildcard *.c))
 TARGET = libnvmmio.a
 
